--- a/templates/help.html
+++ b/templates/help.html
@@ -4,7 +4,7 @@
   {% for item in functions['functions'] %}
   <div class="container div-inline">
     <h3 class="text-success text-center" id="func">{{item["func"]}}</h3>
-    <h4 class="text-primary text-center">{{item["mean"]}}</h4>
+    <h4 class="text-info text-center">{{item["mean"]}}</h4>
   </div>
   {% endfor %}
 </div>
