--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,11 +25,17 @@ main {
 
 #themeToggler,
 #dropdown-menu,
-#func,
 #name {
   margin: 5px;
   width: auto;
   height: auto;
+}
+#mean,
+#func {
+  margin: 5px;
+  width: auto;
+  height: auto;
+  display: inline;
 }
 #link_about {
   margin: 5px;
