--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,7 @@ main {
   margin: 5px;
   width: auto;
   height: auto;
-  display: inline-block;
+  display: inline;
 }
 #link_about {
   margin: 5px;
