--- a/templates/help.html
+++ b/templates/help.html
@@ -1,8 +1,8 @@
 {% extends "source.html" %} {% block content %}
 <h2 class="text-center text-info" id="functions">Functions</h2>
-<div class="container div-inline">
+<div class="container">
   {% for item in functions['functions'] %}
-  <div class="container div-inline">
+  <div class="container">
     <h3 class="text-success text-center" id="func">{{item["func"]}}:</h3>
     <h4 class="text-primary text-center" id="mean">{{item["mean"]}}</h4>
   </div>
